2013-09-15  Paul Smith  <psmith@gnu.org>

	* scripts/options/eval: Verify --eval during restart.
	Test for Savannah bug #39203.

2013-09-14  Paul Smith  <psmith@gnu.org>

	* scripts/features/output-sync: Verify -Orecurse properly.

2013-09-12  Paul Smith  <psmith@gnu.org>

	* scripts/features/output-sync: Modify for output sync behavior.
	* scripts/variables/MAKE_RESTARTS: Ditto.
	* scripts/variables/MAKEFLAGS: Remove mode for --trace.
	* scripts/variables/GNUMAKEFLAGS: Ditto.

2013-07-22  Paul Smith  <psmith@gnu.org>

	* scripts/features/rule_glob: Add tests for wildcards in rules.
	Test for Savannah bug #39310.

2013-07-09  Paul Smith  <psmith@gnu.org>

	* scripts/features/se_implicit: Add a test for SE rules depending
	on other SE rules to be built.

2013-05-26  Paul Smith  <psmith@gnu.org>

	* scripts/features/archives: Test for Savannah bug #38442.

	* scripts/misc/bs-nl: Test for Savannah bug #39035.
	Add a test for Savannah bug #38945.

2013-05-22  Paul Smith  <psmith@gnu.org>

	* scripts/options/dash-n: Fix results after MAKEFLAGS fixes.
	* scripts/variables/MAKEFLAGS: Ditto.
	* scripts/variables/GNUMAKEFLAGS: Ditto.

2013-05-14  Paul Smith  <psmith@gnu.org>

	* scripts/features/loadapi: Add plugin_is_GPL_compatible symbol.
	* scripts/features/load: Ditto.

2013-05-13  Paul Smith  <psmith@gnu.org>

	* scripts/features/output-sync (output_sync_set): Update for new
	--trace behavior.

2013-05-05  Paul Smith  <psmith@gnu.org>

	* scripts/features/output-sync (output_sync_set): Remove
	extraneous enter/leave lines, which are no longer printed.
	Add tests for syncing command line printing.
	(output_sync_set): Rename options: "job"->"line"; "make"->"recurse"

2013-05-04  Paul Smith  <psmith@gnu.org>

	* scripts/features/loadapi: Use the new alloc functions.

	* scripts/features/output-sync (output_sync_set): New test for
	ordered recursive output for -Ojob / -Otarget.

2013-05-03  Eli Zaretskii  <eliz@gnu.org>
